@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-05T12:28:01Z",
-  "count_outdated" : 4835,
-  "uniques_outdated" : 2545,
-  "count" : 4872,
-  "uniques" : 2574,
+  "timestamp" : "2025-05-06T01:07:47Z",
+  "count_outdated" : 4836,
+  "uniques_outdated" : 2546,
+  "count" : 4879,
+  "uniques" : 2579,
   "clones" : [
-    {
-      "timestamp": "2025-04-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-23T00:00:00Z",
       "count": 2,
@@ -124,12 +115,12 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 8,
+      "count_minmax": [ 1, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 6,
+      "uniques_minmax": [ 1, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
