@@ -1,12 +1,7 @@
 {
-  "count": 37,
-  "uniques": 16,
+  "count": 43,
+  "uniques": 19,
   "clones": [
-    {
-      "timestamp": "2025-04-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-23T00:00:00Z",
       "count": 2,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 8,
+      "uniques": 6
     }
   ]
 }
